<resources>
    <string name="app_name">Popular Movies</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main_overview_activity">MainOverviewActivity</string>

    <string name="posterdescription">movie poster</string>

    <string name="pref_browser_sort_order_title_entry">Original Title</string>
    <string name="pref_browser_sort_order_popularity_entry">Popularity</string>
    <string name="pref_browser_sort_order_avgvote_entry">Average Vote</string>
    <string name="pref_browser_sort_order_releasedate_entry">Release Date</string>
    <string name="pref_browser_sort_order_revenue_entry">Revenue</string>

    <string name="pref_browser_sort_order_title_value">original_title.asc</string>
    <string name="pref_browser_sort_order_popularity_value">popularity.desc</string>
    <string name="pref_browser_sort_order_avgvote_value">vote_average.desc</string>
    <string name="pref_browser_sort_order_releasedate_value">release_date.desc</string>
    <string name="pref_browser_sort_order_revenue_value">revenue.desc</string>

    <string name="label_moviedetails_title">Original title</string>
    <string name="label_moviedetails_releasedate">Release date</string>
    <string name="label_moviedetails_revenue">Revenue</string>
    <string name="label_moviedetails_budget">Budget</string>
    <string name="label_moviedetails_voteaverage">Vote average</string>
    <string name="label_moviedetails_synopsis">Synopsis</string>

    <string name="key_intent_movie_selected">movie_selected</string>
    <string name="key_intent_settings_changed">settings_changed</string>
    <string name="key_parcel_movie_details_saved">movie_details_saved</string>



</resources>
