<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/moviedetail"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:isScrollContainer="true">

            <ImageView
                android:id="@+id/moviedetails_poster"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:contentDescription="@string/posterdescription"
                android:layout_gravity="center_horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:scaleType="centerCrop"
                />

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:stretchColumns="1"
                android:layout_gravity="center_horizontal">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/label_moviedetails_title"
                        android:text="@string/label_moviedetails_title"
                        android:layout_weight="1"
                        android:paddingRight="16dp"/>
                    <TextView
                        android:id="@+id/moviedetails_title"
                        android:layout_weight="1"/>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/label_moviedetails_releasedate"
                        android:text="@string/label_moviedetails_releasedate"
                        android:layout_weight="1"
                        android:paddingRight="16dp"/>
                    <TextView
                        android:id="@+id/moviedetails_releasedate"
                        android:layout_weight="1"/>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/label_moviedetails_revenue"
                        android:text="@string/label_moviedetails_revenue"
                        android:layout_weight="1"
                        android:paddingRight="16dp"/>
                    <TextView
                        android:id="@+id/moviedetails_revenue"
                        android:layout_weight="1"/>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/label_moviedetails_budget"
                        android:text="@string/label_moviedetails_budget"
                        android:layout_weight="1"
                        android:paddingRight="16dp"/>
                    <TextView
                        android:id="@+id/moviedetails_budget"
                        android:layout_weight="1"/>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/label_moviedetails_voteaverage"
                        android:text="@string/label_moviedetails_voteaverage"
                        android:layout_weight="1"
                        android:paddingRight="16dp"/>
                    <TextView
                        android:id="@+id/moviedetails_voteaverage"
                        android:layout_weight="1"/>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/label_moviedetails_synopsis"
                        android:text="@string/label_moviedetails_synopsis"
                        android:layout_weight="1"
                        android:paddingRight="16dp"/>
                    <TextView
                        android:id="@+id/moviedetails_synopsis"
                        android:singleLine="false"
                        android:maxLines="50"
                        android:ellipsize="none"
                        android:scrollHorizontally="false"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:width="0dip"
                        android:layout_weight="1"/>
                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>



